--- a/css/styles.css
+++ b/css/styles.css
@@ -606,10 +606,37 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: block;
   margin-left: auto;
+  margin-bottom: 24px;
 }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 16px;
+
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--primery-text-color);
+  border-radius: 4px;
+  border-opacity: 0.2;
+  margin-bottom: 8px;
+  padding-left: 38px;
+}
+
+..modal-input::placeholder {
+  font-size: 12px;
+  text-color: var(--accent-color);
 }
