--- a/css/styles.css
+++ b/css/styles.css
@@ -584,7 +584,7 @@ img {
 .modal {
   width: 408px;
   min-height: 578px;
-  background: #ffffff;
+  background: #FCFCFC;
   border-radius: 4px;
   position: absolute;
   top: 88px;
@@ -626,17 +626,61 @@ img {
   color: var(--primery-text-color);
 }
 
+.input-wrap {
+position: relative;
+}
+
 .modal-input {
   width: 100%;
   height: 40px;
-  border: 1px solid var(--primery-text-color);
+  border: 1px solid var(--icon-fill);
   border-radius: 4px;
-  border-opacity: 0.2;
-  margin-bottom: 8px;
+  outline: transparent;
   padding-left: 38px;
+  background-color: transparent;
 }
 
-..modal-input::placeholder {
+.modal-input::placeholder {
   font-size: 12px;
-  text-color: var(--accent-color);
+}
+
+.modal-input-icon {
+position: absolute;
+left: 16px;
+top: 50%;
+transform: translateY(-50%);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-field {
+  margin-bottom: 8px;
+}
+
+.modal-label-text {
+  font-size: 12px;
+  color: #8E8F99;
+  margin-bottom: 4px;
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid var(--icon-fill);
+  border-radius: 4px;
+  padding: 8px 16px;
+  background-color: transparent;
+  resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+}
+
+.modal-textarea:focus {
+  border-color: var(--accent-color);
 }
