--- a/css/styles.css
+++ b/css/styles.css
@@ -584,7 +584,7 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--accent-color);
+  background-color: var(--title-text-color);
   display: flex;
   align-items: center;
   justify-content: center;
