--- a/css/styles.css
+++ b/css/styles.css
@@ -615,6 +615,7 @@ img {
 .online-input {
   width: 264px;
   height: 40px;
+  padding: 10px;
   border-radius: 4px;
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -769,6 +770,7 @@ img {
   resize: none;
   font-size: 12px;
   line-height: 1.17;
+  outline: none;
 }
 
 .modal-textarea:focus {
