--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,7 @@ img {
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: transparent;
+  outline: none;
 }
 
 .online-label {
