--- a/css/styles.css
+++ b/css/styles.css
@@ -239,10 +239,8 @@ img {
 
   background-color: var(--accent-color);
   color: var(--header-color);
-
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--cubic);
+  cursor: pointer;
+  transition: background-color 250ms var(--cubic);
 }
 
 .online-btn {
@@ -529,6 +527,7 @@ img {
 
 .footer-container {
   display: flex;
+  position: relative;
   gap: 120px;
 }
 .footer-text {
@@ -588,15 +587,17 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--cubic);
+  transition: background-color 250ms var(--cubic);
 }
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
   background-color: #31d0aa;
+}
+
+.footer-subscribe {
+  position: absolute;
+  right: 15px;
 }
 
 .footer-subscribe-text {
@@ -615,15 +616,16 @@ img {
 .online-input {
   width: 264px;
   height: 40px;
-  padding: 10px;
+  padding: 8px 16px;
   border-radius: 4px;
+  color: #ffffff;
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: transparent;
   outline: none;
 }
 
-.online-label {
+.online-input::placeholder {
   font-size: 12px;
   line-height: 2;
   display: flex;
@@ -634,6 +636,9 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+}
+.online-label {
+  color: #ffffff;
 }
 
 .online-form {
@@ -666,15 +671,15 @@ img {
   background: #fcfcfc;
   border-radius: 4px;
   position: absolute;
-  top: 88px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%) scaleY(1);
-  transition: transform 250ms linear;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--cubic);
   padding: 24px;
 }
 
 .backdrop.is-hidden .modal {
-  transform: translateX(-50%) scaleY(0);
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal-close {
@@ -689,6 +694,7 @@ img {
   align-items: center;
   justify-content: center;
   transition: background-color 250ms var(--cubic);
+  cursor: pointer;
 }
 
 .close-icon {
@@ -705,6 +711,10 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .modal-title {
@@ -725,7 +735,7 @@ img {
 .modal-input {
   width: 100%;
   height: 40px;
-  border: 1px solid var(--icon-fill);
+  border: 1px solid var(--primery-text-color);
   border-radius: 4px;
   outline: transparent;
   padding-left: 38px;
@@ -757,6 +767,8 @@ img {
 
 .modal-label-text {
   font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
 }
@@ -764,7 +776,7 @@ img {
 .modal-textarea {
   width: 100%;
   height: 120px;
-  border: 1px solid var(--icon-fill);
+  border: 1px solid var(--primery-text-color);
   border-radius: 4px;
   padding: 8px 16px;
   background-color: transparent;
