--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,7 @@ img {
   border-color: transparent;
   margin-right: auto;
   margin-left: auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   background-color: var(--accent-color);
   color: var(--header-color);
@@ -251,6 +252,7 @@ img {
   border-radius: 4px;
   border-color: transparent;
   padding: 8px 24px;
+  box-shadow: none;
 }
 
 .hero-btn:hover,
